--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ nav {
 }
 
 nav img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 
 nav .btn-primary {
@@ -55,7 +55,7 @@ nav h1 {
     line-height: 2vw;
     left: 0;
     margin: auto;
-    font-size: 1.75vw;
+    font-size: 20px;
     text-align: center;
     font-weight: bold;
 }
