--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,7 @@ nav .btn:disabled {
 }
 
 .text-primary {
-    /*color: var(--primary-color);*/
-    color: rgba(var(--primary-color),var(--bs-text-opacity)) !important
+    color: rgba(var(--primary-color),var(--bs-text-opacity)) 
 }
 
 .main-container {
@@ -78,4 +77,17 @@ nav .btn:disabled {
     border-radius: var(--border-radius);
     border: solid 1px var(--primary-color);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+  width: 100%;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.active {
+  background-color: darken(var(--primary-color), 10%);
+  border-color: darken(var(--primary-color), 10%);
 }
