--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
     <h2>Pocket 5</h2>
 </div>
 <div class="d-flex justify-content-center my-3">
-    <form class="mx-auto">
+    <form id="form" class="mx-auto">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
