--- a/views/login.css
+++ b/views/login.css
@@ -1,11 +1,11 @@
 
 h2 {
-    
+    margin-top: 10px;
 }
 
 img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 30%;
+    max-height: 30%;
     display:block;
     margin:auto;
 }
