--- a/views/registration.html
+++ b/views/registration.html
@@ -10,14 +10,14 @@
         <div class="form-section">
             <h3>SERVER USER CONFIGURATION</h3>
             <div class="mb-3">
-                <label for="passwdInput" class="form-label">Enter password</label>
-                <input type="password" class="form-control" id="passwdInput">
-                <div id="passwdInputError" class="form-control-error collapse"></div>
+                <label for="inputPasswd" class="form-label">Enter password</label>
+                <input type="password" class="form-control" id="inputPasswd">
+                <div id="inputPasswdError" class="form-control-error collapse"></div>
             </div>
             <div class="mb-3">
-                <label for="confirmPasswdInput" class="form-label">Confirm password</label>
-                <input type="password" class="form-control" id="confirmPasswdInput">
-                <div id="confirmPasswdInputError" class="form-control-error collapse"></div>
+                <label for="inputConfirmPasswd" class="form-label">Confirm password</label>
+                <input type="password" class="form-control" id="inputConfirmPasswd">
+                <div id="inputConfirmPasswdError" class="form-control-error collapse"></div>
             </div>
         </div>
 
