feat: add error handling from server

--- a/views/registration.html
+++ b/views/registration.html
@@ -2,8 +2,11 @@
     <form id="form" class="mx-auto">
         <!-- SERVER JSON CONFIGURATION -->
         <div class="form-section">
-            <h3>SERVER JSON CONFIGURATION</h3>
+            <label for="jsonConfig">SERVER JSON CONFIGURATION</label>
             <textarea id="jsonConfig" class="form-control" rows="10"></textarea>
+            <div class="invalid-feedback">
+                Please provide server configuration
+            </div>
         </div>
 
         <!-- SERVER USER CONFIGURATION -->
