feat: develop registration page

--- a/views/registration.html
+++ b/views/registration.html
@@ -10,17 +10,22 @@
         </div>
 
         <!-- SERVER USER CONFIGURATION -->
-        <div class="form-section">
+        <div class="form-section mt-5">
             <h3>SERVER USER CONFIGURATION</h3>
+            <div class="mb-3">
+                <label for="inputEmail" class="form-label">Enter email</label>
+                <input type="email" class="form-control" id="inputEmail">
+                <div id="inputEmailError" class="form-control-error collapse"></div>
+            </div>
             <div class="mb-3">
                 <label for="inputPasswd" class="form-label">Enter password</label>
                 <input type="password" class="form-control" id="inputPasswd">
                 <div id="inputPasswdError" class="form-control-error collapse"></div>
             </div>
             <div class="mb-3">
-                <label for="inputConfirmPasswd" class="form-label">Confirm password</label>
-                <input type="password" class="form-control" id="inputConfirmPasswd">
-                <div id="inputConfirmPasswdError" class="form-control-error collapse"></div>
+                <label for="inputPasswdConfirm" class="form-label">Confirm password</label>
+                <input type="password" class="form-control" id="inputPasswdConfirm">
+                <div id="inputPasswdConfirmError" class="form-control-error collapse"></div>
             </div>
         </div>
 
