--- a/views/home.html
+++ b/views/home.html
@@ -1,2 +1,23 @@
-<div>home</div>
-<a href="#" id="test">main</a>
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-search">
+  <button class="btn btn-outline-secondary" type="button" id="button-search">Button</button>
+</div>
+
+<div id="data-container" class="container">
+  <div id="row-{id}" class="row">
+    <div class="col-md-auto">
+      <img src="{icon}" alt="{icon-alt}" class="img-thumbnail">
+    </div>
+    <div class="col">
+      {title}
+    </div>
+    <div class="col">
+      {passwd}
+    </div>
+    <div class="col-md-auto">
+      {buttons}
+    </div>
+  </div>
+</div>
+
+<link href="/views/home.css" rel="stylesheet">
