--- a/views/home.css
+++ b/views/home.css
@@ -3,3 +3,7 @@
     max-width: 24px;
     filter: invert(72%) sepia(31%) saturate(7309%) hue-rotate(323deg) brightness(98%) contrast(91%);
 }
+
+.passwd {
+    text-align: end;
+}
