--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,7 @@
+<div class="input-group mb-3 collapse">
+  <textarea class="form-control" aria-label="Group note"></textarea>
+</div>
+
 <div class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Filter the data below" aria-label="Filter the data below" aria-describedby="button-search">
   <button class="btn btn-outline-secondary" type="button" id="button-search">Search</button>
@@ -11,11 +15,11 @@
     <div class="col" data-type="{type}" data-type-id="{id}">
       {title}
     </div>
-    <!--
+    <!--passwd
     <div class="col-md-auto passwd" data-field="passwd" data-type="{type}" data-type-id="{id}">
       {passwd}
     </div>
-    -->
+    passwd-->
     <div class="col-md-auto" data-type="{type}" data-type-id="{id}">
       {buttons}
     </div>
