--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
 </div>
 
 <div id="data-container" class="container">
-  <div id="row-{type}-{id}" class="row">
+  <div id="row-{type}-{id}" class="row row-{type}">
     <div class="col-md-auto" data-type="{type}" data-type-id="{id}">
       <img src="{icon}" alt="{icon-alt}">
     </div>
@@ -16,7 +16,7 @@
       {title}
     </div>
     <!--is-hidden
-    <div class="col-md-auto passwd" data-field="passwd" data-type="{type}" data-type-id="{id}">
+    <div class="col-md-auto passwd" data-field="is-hidden" data-type="{type}" data-type-id="{id}">
       {is-hidden}
     </div>
     is-hidden-->
