feat: update home

--- a/views/home.css
+++ b/views/home.css
@@ -21,3 +21,10 @@
     background-color: var(--secondary-active-color);
     cursor: pointer;
 }
+
+.row-separator {
+    background-color: var(--secondary-active-color);
+    height: 1px;
+    width: auto;
+    margin: 4px 20px;
+}
