--- a/views/registration.html
+++ b/views/registration.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-primary btn-full-width">Register</button>
     </form>
 
 </div>
