--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
             </span>
             <input type="password" class="form-control" id="inputPasswd" placeholder="Password" aria-label="Password" aria-describedby="addonInputPasswd">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary btn-full-width">Login</button>
     </form>
 </div>
 
