--- a/views/group-detail.html
+++ b/views/group-detail.html
@@ -1,20 +1,20 @@
-<div class="input-group mb-3">
-  <span class="input-group-text" id="group-title-ico"><img src="/images/ic_group.svg" alt="Group icon"></span>
-  <input type="text" class="form-control" placeholder="Group title" aria-label="Group title" aria-describedby="group-title-ico" id="group-title">
+<div class="form-floating mb-3 ">
+  <input type="text" class="form-control" placeholder="Group title" id="group-title">
+  <label for="group-title">Group title</label>
 </div>
 
 <div class="form-floating">
-  <textarea class="form-control" placeholder="Note" id="group-note-txt-area" id="group-note"></textarea>
-  <label for="group-note-txt-area">Note</label>
+  <textarea class="form-control group-note-height" placeholder="Note" id="group-note"></textarea>
+  <label for="group-note">Group note</label>
 </div>
 
 <div class="container text-center pt-3">
   <div class="row">
 
     <div class="col no-padding">
-      <div class="input-group">
-        <span class="input-group-text" id="field-title-ico"><img src="/images/ic_field.svg" alt="Field icon"></span>
-        <input type="text" class="form-control" placeholder="Field title" aria-label="Field title" aria-describedby="field-title-ico" id="field-title">
+      <div class="form-floating">
+        <input type="text" class="form-control" placeholder="Field title" id="field-title">
+        <label for="field-title">Field note</label>
       </div>
     </div>
 
@@ -28,8 +28,8 @@
     </div>
 
     <div class="col col-md-auto d-flex align-items-center justify-content-center">
-      <img src="/images/ic_add_black.svg" class="mouse-hover" alt="Add field group" id="field-add"/>
-      <img src="/images/ic_clear.svg" class="ms-1 mouse-hover" alt="Clear all data insert" id="field-clean"/>
+      <img class="ico" src="/images/ic_add_black.svg" class="mouse-hover" alt="Add field group" id="field-add"/>
+      <img class="ico" src="/images/ic_clear.svg" class="ms-1 mouse-hover" alt="Clear all data insert" id="field-clean"/>
     </div>
 
   </div>
@@ -53,12 +53,11 @@
         <input class="form-check-input" type="checkbox" value="" id="checkbox-{id}" disabled>
       </td>
       <td class="col-actions" id="col-actions-{id}">
-        <img src="/images/ic_edit.svg" class="mouse-hover" id="edit-{id}" alt="Edit field group"/>
-        <img src="/images/ic_clear.svg" class="ms-1 mouse-hover" id="delete-{id}"  alt="Delete field group"/>
+        <img class="ico" src="/images/ic_edit.svg" class="mouse-hover" id="edit-{id}" alt="Edit field group"/>
+        <img class="ico" src="/images/ic_clear.svg" class="ms-1 mouse-hover" id="delete-{id}"  alt="Delete field group"/>
       </td>
     </tr>
   </tbody>
 </table>
-
 
 <link href="/views/group-detail.css" rel="stylesheet">
